[package]
name = "rdma-rpc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
KRdmaKit = { path = "../deps/krcore/KRdmaKit" }
libc = { version = "0.2.138", default-features = false }
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
bincode = "1.3.3"
spin = "0.9.4"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.10.0"
anyhow = { version = "1.0.66", default-features = false }

[features]
default = ["user"]
user = ["KRdmaKit/user"]
