[package]
name = "rdma-rpc"
version = "0.1.0"
edition = "2021"

[[example]]
name = "kv-rpc-server"
path = "examples/kv/kv_server.rs"

[[example]]
name = "kv-rpc-client"
path = "examples/kv/kv_client.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
KRdmaKit = { path = "../deps/krcore/KRdmaKit" }
rdma-rpc-core = { path = "../rdma-rpc-core" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
spin = "0.9.4"

[features]
default = ["user"]
user = ["KRdmaKit/user"]
