[package]
name = "tcp-sliding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
colored = {version = "2.0.0"}
bytes = "1.2.1"
rand = {version = "0"}
crossbeam = {version = "0.8.2"}
[features]